terraform/main.tf
resource "aws_instance" "web_server" {

  ami           = var.ami_id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.subnet1.id
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  tags = {
    Name = "CloudProjectServer"
  }

}
