terraform/vpc.tf
resource "aws_vpc" "main" {

  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "TerraformVPC"
  }

}

resource "aws_subnet" "subnet1" {

  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "TerraformSubnet1"
  }

}
